# MLPlayground

./: .gitignore  README.md  pyproject.toml  ruff.toml
src/ai/: model.py  train.py
src/graphics/: hello_world_triangle_strip.py  physics_shape.py  shape.py
src/graphics/tests/: apply_force.py  physics_shape.py  shape.py
