[project]
name = "mlplayground"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "box2d>=2.3.10",
    "glfw>=2.9.0",
    "numpy>=2.3.2",
    "pyglm>=2.8.2",
    "pyopengl>=3.1.10",
]

[project.optional-dependencies]
cpu = ["torch>=2.7.0"]
cu128 = ["torch>=2.7.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu128" }]]

[tool.uv.sources]
mlplayground = { workspace = true }
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = ["mlplayground", "ruff>=0.12.12"]
